clusters/proxmox-home/apps/share/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: share
  labels:
    app.kubernetes.io/name: share
    app.kubernetes.io/component: namespace
