clusters/proxmox-home/apps/share/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: share
  namespace: share
  labels:
    app.kubernetes.io/name: share
    app.kubernetes.io/component: deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: share
  template:
    metadata:
      labels:
        app.kubernetes.io/name: share
    spec:
      securityContext:
        fsGroup: 101
      containers:
        - name: nginx
          image: nginx:alpine
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /usr/share/nginx/html
            - name: config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: share
        - name: config
          configMap:
            name: share-nginx-config
