clusters/proxmox-home/apps/share/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: share
  namespace: share
  labels:
    app.kubernetes.io/name: share
    app.kubernetes.io/component: service
spec:
  selector:
    app.kubernetes.io/name: share
  ports:
    - name: http
      port: 80
      targetPort: http
