clusters/proxmox-home/apps/share/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: share-ingress
  namespace: share
  labels:
    app.kubernetes.io/name: share-ingress
    app.kubernetes.io/component: ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - share.mgsds.com
      secretName: share.mgsds.com-tls
  rules:
    - host: share.mgsds.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: share
                port:
                  number: 80
